Add TextBox With ValidationRule

--- a/CookPopularControl/Themes/BaseStyle/PasswordBoxBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/PasswordBoxBaseStyle.xaml
@@ -70,7 +70,7 @@
                                               Margin="{TemplateBinding attached:FrameworkElementBaseAttached.IconMargin}"
                                               Foreground="{DynamicResource PrimaryColorTheme}" Background="Transparent" BorderThickness="0"
                                               Visibility="{TemplateBinding assistant:PasswordBoxAssistant.IsShowIcon,Converter={toolsConverters:BooleanToVisibilityConverter}}"/>
-                                <Button x:Name="PART_ClearButton" Effect="{x:Null}" ToolTip="Clear Password"
+                                <Button x:Name="PART_ClearButton" Effect="{x:Null}" ToolTip="Clear"
                                         Style="{DynamicResource IconTransparentButtonStyle}"
                                         attached:FrameworkElementBaseAttached.IconWidth="{TemplateBinding attached:FrameworkElementBaseAttached.IconWidth}"
                                         attached:FrameworkElementBaseAttached.IconHeight="{TemplateBinding attached:FrameworkElementBaseAttached.IconHeight}"
