--- a/TestDemo/Demos/PasswordBoxDemo.xaml
+++ b/TestDemo/Demos/PasswordBoxDemo.xaml
@@ -31,18 +31,7 @@
                         pc:ButtonBaseAttached.IsShowRipple="True"
                         Click="Button1_Click"/>
 
-                <TextBox x:Name="tb" Width="300" Height="40" BorderThickness="2"
-                             pc:FrameworkElementBaseAttached.CornerRadius="10"
-                             Validation.ErrorTemplate="{StaticResource ValidationErrorBaseTemplate}">
-                    <TextBox.Text>
-                        <Binding Path="PasswordContent1" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged">
-                            <Binding.ValidationRules>
-                                <pc:RegularPatternValidationRule RegularPattern="Digital" ValidatesOnTargetUpdated="True"/>
-                            </Binding.ValidationRules>
-                        </Binding>
-                    </TextBox.Text>
-                </TextBox>
-                <PasswordBox Width="300" Height="40" BorderThickness="1" Margin="30,0"
+                <PasswordBox Width="300" Height="40" BorderThickness="1"
                              pc:FrameworkElementBaseAttached.CornerRadius="5"
                              InputMethod.InputScope="Password" InputScope="Password"
                              Validation.ErrorTemplate="{StaticResource ValidationErrorBaseTemplate}">
@@ -54,7 +43,7 @@
                         </Binding>
                     </pc:PasswordBoxAssistant.Password>
                 </PasswordBox>
-                <Button Content="验证密码" Width="100" Height="34"
+                <Button Content="验证密码" Width="100" Height="34" Margin="30,0"
                         pc:ButtonBaseAttached.IsShowRipple="True"
                         Click="Button2_Click"/>
             </WrapPanel>
