文本输入控件统一变更为FieldsDemo

--- a/TestDemo/MainWindow.xaml
+++ b/TestDemo/MainWindow.xaml
@@ -25,9 +25,8 @@
         <!--<local:ProgressBarDemo />-->
         <!--<local:CheckBoxDemo />-->
         <!--<local:PasswordBoxDemo />-->
-        <local:FieldsDemo />
+        <!--<local:FieldsDemo />-->
         <!--<local:GroupBoxDemo />-->
-        <!--<local:TextBlockDemo />-->
     </Grid>
 
 
