--- a/CookPopularControl/Themes/PasswordBoxStyle.xaml
+++ b/CookPopularControl/Themes/PasswordBoxStyle.xaml
@@ -12,7 +12,7 @@
         <Setter Property="assistant:PasswordBoxAssistant.IsTrigger" Value="True" />
         <Setter Property="assistant:PasswordBoxAssistant.Password" Value="{Binding RelativeSource={RelativeSource Self},Path=Password,UpdateSourceTrigger=PropertyChanged}" />
         <Setter Property="attached:TextElementAttached.PlaceHolder" Value="请输入密码..." />
-        <Setter Property="attached:TextElementAttached.PlaceHolderBrush" Value="{DynamicResource PrimaryForeground}" />
+        <Setter Property="attached:TextElementAttached.PlaceHolderBrush" Value="{DynamicResource FieldPlaceHolderBrush}" />
         <Setter Property="attached:FrameworkElementBaseAttached.CornerRadius" Value="10"/>
     </Style>
 
