--- a/CookPopularControl/Backcolors/DefaultPopularColor.xaml
+++ b/CookPopularControl/Backcolors/DefaultPopularColor.xaml
@@ -12,6 +12,7 @@
     <SolidColorBrush x:Key="BorderBrushColor" Color="#8B008B"/>
 
     <SolidColorBrush x:Key="FieldBorderBrush" Color="{x:Static SystemColors.ActiveBorderColor}"/>
+    <SolidColorBrush x:Key="FieldPlaceHolderBrush" Color="#D3D3D3"/>
     <SolidColorBrush x:Key="FieldValidationErrorBrush" Color="#FF1F1F"/>
 
     <SolidColorBrush x:Key="BlockColor" Color="#664A4A4A"/>
