--- a/CookPopularControl/Themes/TextBoxStyle.xaml
+++ b/CookPopularControl/Themes/TextBoxStyle.xaml
@@ -8,7 +8,7 @@
 
     <Style x:Key="DefaultTextBoxStyle" TargetType="{x:Type TextBox}" BasedOn="{StaticResource TextBoxBaseStyle}">
         <Setter Property="attached:TextElementAttached.PlaceHolder" Value="请输入文本..." />
-        <Setter Property="attached:TextElementAttached.PlaceHolderBrush" Value="{DynamicResource PrimaryForeground}" />
+        <Setter Property="attached:TextElementAttached.PlaceHolderBrush" Value="{DynamicResource FieldPlaceHolderBrush}" />
         <Setter Property="attached:FrameworkElementBaseAttached.CornerRadius" Value="10"/>
     </Style>
 
