--- a/CookPopularControl/Themes/BaseStyle/ComboBoxBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/ComboBoxBaseStyle.xaml
@@ -122,8 +122,8 @@
                             Background="{TemplateBinding Background}" CornerRadius="{TemplateBinding attached:FrameworkElementBaseAttached.CornerRadius}">
                         <Grid x:Name="RootGrid" SnapsToDevicePixels="True" >
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="7*"/>
-                                <ColumnDefinition Width="3*"/>
+                                <ColumnDefinition />
+                                <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock x:Name="PART_PlaceHolder" Text="{TemplateBinding attached:TextElementAttached.PlaceHolder}" 
                                        Foreground="{TemplateBinding attached:TextElementAttached.PlaceHolderBrush}"
@@ -135,7 +135,7 @@
                                      IsHitTestVisible="{TemplateBinding IsEditable}" IsReadOnly="{TemplateBinding IsReadOnly}" Padding="{TemplateBinding Padding}"
                                      HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
                                      VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
-                            <DockPanel Grid.Column="1" >
+                            <WrapPanel Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center">
                                 <Button x:Name="PART_ClearButton" Effect="{x:Null}" ToolTip="Clear"
                                         Style="{DynamicResource IconTransparentButtonStyle}"
                                         attached:FrameworkElementBaseAttached.IconWidth="{TemplateBinding attached:FrameworkElementBaseAttached.IconWidth}"
@@ -151,9 +151,9 @@
                                     </Button.Visibility>
                                 </Button>
                                 <ToggleButton Style="{StaticResource DropDownToggleButtonStyle}"
-                                              Focusable="False" HorizontalAlignment="Right" Margin="0,0,8,0"
+                                              Focusable="False" HorizontalAlignment="Right" Margin="8,0"
                                               IsChecked="{Binding Path=IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"/>
-                            </DockPanel>
+                            </WrapPanel>
                             <Popup x:Name="PART_Popup" IsOpen="{TemplateBinding IsDropDownOpen}" AllowsTransparency="True" PopupAnimation="Slide" Placement="Bottom"
                                    HorizontalOffset="-1" VerticalOffset="0">
                                 <Border x:Name="PopupBorder" CornerRadius="0"
@@ -204,30 +204,34 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                    <Border x:Name="ItemBorder" BorderBrush="#FFFFFF" BorderThickness="0,1,0,0"
+                    <Border x:Name="ItemBorder" BorderBrush="Transparent" BorderThickness="0,1,0,0"
                             Background="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=(attached:SelectorAttached.ItemsListBackground)}">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="7*" />
-                                <ColumnDefinition Width="2*" />
+                                <ColumnDefinition Width="3*" />
                             </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Column="0" Text="{TemplateBinding Content}"   
+                            <TextBlock Grid.Column="0" Text="{Binding RelativeSource={RelativeSource Mode=TemplatedParent},Path=Content}"   
                                        Padding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=Padding}"
                                        HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                        VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
-                            <Grid Grid.Column="1" x:Name="ItemGrid"
+                            <Grid Grid.Column="1" x:Name="ItemGrid" HorizontalAlignment="Right" Margin="0,0,10,0"
                                   Width="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=(attached:SelectorAttached.ItemControlWidth)}"
                                   Height="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=(attached:SelectorAttached.ItemControlHeight)}">
                                 <CheckBox x:Name="ItemCheckBox" Focusable="True" Width="{Binding ElementName=ItemGrid,Path=Width}" Height="{Binding ElementName=ItemGrid,Path=Height}"
+                                          Content="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=(attached:SelectorAttached.CheckBoxContent)}"
+                                          IsChecked="{Binding RelativeSource={RelativeSource Mode=TemplatedParent},Path=IsSelected}"
+                                          attached:SelectorAttached.IsCheckBoxChecked="True"
                                           Visibility="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=(attached:SelectorAttached.SelectorItemType),
                                                       Converter={commonConverters:SelectorItemTypeToVisibilityConverter},ConverterParameter=CheckBox}"/>
                                 <Button x:Name="ItemButton" Width="{Binding ElementName=ItemGrid,Path=Width}" Height="{Binding ElementName=ItemGrid,Path=Height}"
                                         Content="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=(attached:SelectorAttached.ButtonContent)}" 
                                         attached:FrameworkElementBaseAttached.CornerRadius="2" Focusable="True"
+                                        attached:SelectorAttached.IsButtonDeleteItem="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=(attached:SelectorAttached.IsButtonDeleteItem)}"
                                         attached:ButtonBaseAttached.ButtonBaseMouseOverBackground="{DynamicResource AssistantForeground}"
                                         attached:ButtonBaseAttached.ButtonBasePressBackground="{DynamicResource AssistantForeground}"
                                         Visibility="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=(attached:SelectorAttached.SelectorItemType),
-                                                    Converter={commonConverters:SelectorItemTypeToVisibilityConverter},ConverterParameter=Button}"/>
+                                                            Converter={commonConverters:SelectorItemTypeToVisibilityConverter},ConverterParameter=Button}"/>
                                 <Path x:Name="ItemIcon" Width="{Binding ElementName=ItemGrid,Path=Width}" Height="{Binding ElementName=ItemGrid,Path=Height}" Stretch="Uniform"
                                       Data="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=(attached:FrameworkElementBaseAttached.IconGeometry)}" 
                                       Fill="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=(attached:SelectorAttached.IconFill)}" 
@@ -243,10 +247,6 @@
                         </Grid>
                     </Border>
                     <ControlTemplate.Triggers>
-                        <Trigger Property="IsSelected" Value="True">
-                            <Setter Property="Foreground" Value="{DynamicResource AssistantForeground}" />
-                            <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=(attached:SelectorAttached.ItemMouseOverBackground)}" TargetName="ItemBorder"/>
-                        </Trigger>
                         <Trigger Property="IsMouseOver" Value="true">
                             <Setter Property="BorderBrush" Value="{DynamicResource AssistantForeground}" TargetName="ItemCheckBox"/>
                             <Setter Property="Background" Value="{DynamicResource AssistantForeground}" TargetName="ItemButton"/>
@@ -255,6 +255,9 @@
 
                             <Setter Property="Foreground" Value="{DynamicResource AssistantForeground}" />
                             <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=(attached:SelectorAttached.ItemMouseOverBackground)}" TargetName="ItemBorder"/>
+                        </Trigger>
+                        <Trigger Property="IsChecked" Value="True" SourceName="ItemCheckBox">
+                            <Setter Property="BorderThickness" Value="3" TargetName="ItemCheckBox"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -284,8 +287,8 @@
                             Background="{TemplateBinding Background}" CornerRadius="{TemplateBinding attached:FrameworkElementBaseAttached.CornerRadius}">
                         <Grid x:Name="RootGrid" SnapsToDevicePixels="True" >
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="7*"/>
-                                <ColumnDefinition Width="3*"/>
+                                <ColumnDefinition />
+                                <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock x:Name="PART_PlaceHolder" Text="{TemplateBinding attached:TextElementAttached.PlaceHolder}" 
                                        Foreground="{TemplateBinding attached:TextElementAttached.PlaceHolderBrush}"
@@ -297,7 +300,8 @@
                                      IsHitTestVisible="{TemplateBinding IsEditable}" IsReadOnly="{TemplateBinding IsReadOnly}" Padding="{TemplateBinding Padding}"
                                      HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
                                      VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
-                            <DockPanel Grid.Column="1" >
+                            <WrapPanel Grid.Column="1" Orientation="Horizontal" 
+                                       HorizontalAlignment="Right" VerticalAlignment="Center">
                                 <Button x:Name="PART_ClearButton" Effect="{x:Null}" ToolTip="Clear"
                                         Style="{DynamicResource IconTransparentButtonStyle}"
                                         attached:FrameworkElementBaseAttached.IconWidth="{TemplateBinding attached:FrameworkElementBaseAttached.IconWidth}"
@@ -313,9 +317,9 @@
                                     </Button.Visibility>
                                 </Button>
                                 <ToggleButton Style="{StaticResource DropDownToggleButtonStyle}"
-                                              Focusable="False" HorizontalAlignment="Right" Margin="0,0,8,0"
+                                              Focusable="False" HorizontalAlignment="Right" Margin="8,0"
                                               IsChecked="{Binding Path=IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"/>
-                            </DockPanel>
+                            </WrapPanel>
                             <Popup x:Name="PART_Popup" IsOpen="{TemplateBinding IsDropDownOpen}" AllowsTransparency="True" PopupAnimation="Slide" Placement="Bottom"
                                    HorizontalOffset="-1" VerticalOffset="0">
                                 <Border x:Name="PopupBorder" CornerRadius="0"
@@ -326,12 +330,12 @@
                                             <ScaleTransform ScaleX="0" ScaleY="0"/>
                                         </TransformGroup>
                                     </Border.RenderTransform>
+                                    <!--ItemsSource="{Binding RelativeSource={RelativeSource Mode=TemplatedParent},Path=Items}"-->
                                     <ListBox x:Name="PART_ListBox" Width="{TemplateBinding Width}" MaxHeight="{TemplateBinding MaxDropDownHeight}"                                            
                                              HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                             VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"                                             
+                                             VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"                                 
                                              SelectionMode="Extended" BorderThickness="0" ScrollViewer.HorizontalScrollBarVisibility="Hidden"
                                              ItemContainerStyle="{StaticResource MultiComboBoxItemStyle}" ItemTemplate="{TemplateBinding ItemTemplate}"/>
-                                    <!--ItemsSource="{Binding RelativeSource={RelativeSource Mode=TemplatedParent},Path=Items}"-->
                                 </Border>
                             </Popup>
                         </Grid>
@@ -357,5 +361,6 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
+
+
 </ResourceDictionary>
