Test SimpleComboBox And MultiComboBox

--- a/TestDemo/MainWindow.xaml
+++ b/TestDemo/MainWindow.xaml
@@ -27,6 +27,7 @@
         <!--<local:PasswordBoxDemo />-->
         <!--<local:FieldsDemo />-->
         <!--<local:GroupBoxDemo />-->
+        <local:ComboBoxDemo />
     </Grid>
 
 
