--- a/CookPopularControl/Themes/BaseStyle/ComboBoxBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/ComboBoxBaseStyle.xaml
@@ -39,7 +39,7 @@
                                 <ScaleTransform ScaleX="1" ScaleY="1"/>
                             </TransformGroup>
                         </Border.RenderTransform>
-                        <Path Data="{DynamicResource InvertedTriangleGeometry}" Stretch="Uniform"
+                        <Path Data="{DynamicResource DownTriangleGeometry}" Stretch="Uniform"
                               Fill="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox},Path=(assistant:ComboBoxAssistant.DropDownButtonFill)}" 
                               HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
